test/integration/page-config/pages/invalid/spread-config.js
const props = { amp: true }

// export const config = { ...props }

export default () => <p>{JSON.stringify(props)}</p>
